WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
15053
WebKit does not check Windows Registry HKEY_CURRENT_USER for NPAPI plugin locations
https://bugs.webkit.org/show_bug.cgi?id=15053
Summary
WebKit does not check Windows Registry HKEY_CURRENT_USER for NPAPI plugin loc...
Vitorio Miliano
Reported
2007-08-22 16:09:02 PDT
Summary: Safari 3 for Windows (tested against 3.0.2, 3.0.3 [522.15.5] and the latest WebKit nightly [
r25168
]) only checks HKEY_LOCAL_MACHINE for NPAPI plugin locations, not HKEY_CURRENT_USER, which means it does not find plugins that were installed without Administrator priviledges.
http://developer.mozilla.org/en/docs/Plugins:_The_first_install_problem
explains that HKEY_CURRENT_USER\Software\MozillaPlugins is a valid location for plugin data for non-Administrator installs. Both locations should be checked. Steps to Reproduce: Install an NPAPI plugin in an arbitrary (and ostensibly writeable-as-less-than-Adminstrator) location, e.g. on your Desktop. Create a minimal HKEY_LOCAL_MACHINE registry entry for this plugin, e.g. by running the following registry script: ---------- Windows Registry Editor Version 5.00 [HKEY_LOCAL_MACHINE\Software\MozillaPlugins\
npsconnect@gemalto.com
/SConnect;version=0.5.0.0] "Path"="C:\\Documents and Settings\\vmiliano\\Desktop\\npsconnect.dll" ---------- Check Safari's "Installed Plug-ins" page and see the plugin listed. Delete the registry entry, reload the page and confirm the plugin is no longer listed. Create a minimal HKEY_CURRENT_USER registry entry for the plugin, e.g. by running the following registry script: ---------- Windows Registry Editor Version 5.00 [HKEY_CURRENT_USER\Software\MozillaPlugins\
npsconnect@gemalto.com
/SConnect;version=0.5.0.0] "Path"="C:\\Documents and Settings\\vmiliano\\Desktop\\npsconnect.dll" ---------- Check Safari's "Installed Plug-ins" page and see that the plugin is NOT listed. Expected Results: The plugin should be found whether the plugin is installed in HKEY_LOCAL_MACHINE or HKEY_CURRENT_USER. Actual Results: The plugin is only found when installed in HKEY_LOCAL_MACHINE, requiring Administrator access. Regression: Occurs in Safari 3.0.2, 3.0.3, and in the latest WebKit nightly build (
r25168
, 2007-08-21 09:28:20 GMT)
Attachments
My NPAPI plugin, but any will demonstrate the bug
(72.00 KB, application/octet-stream)
2007-08-22 16:10 PDT
,
Vitorio Miliano
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Vitorio Miliano
Comment 1
2007-08-22 16:10:13 PDT
Created
attachment 16082
[details]
My NPAPI plugin, but any will demonstrate the bug
Matt Lilek
Comment 2
2007-08-22 16:35:22 PDT
From webkit-dev, the radar is <
rdar://problem/5430584
>.
Anders Carlsson
Comment 3
2007-08-22 17:03:09 PDT
Committed revision 25193.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug