        Reviewed by Adam.

<rdar://problem/5430584>
        http://bugs.webkit.org/show_bug.cgi?id=15053
        WebKit does not check Windows Registry HKEY_CURRENT_USER for NPAPI plugin locations

        * plugins/win/PluginDatabaseWin.cpp:
        (WebCore::addPluginsFromRegistry):
        (WebCore::PluginDatabaseWin::getPluginsInPaths):



Canonical link: https://commits.webkit.org/19697@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25193 268f45cc-cd09-0410-ab3c-d52691b4dbfc